--- a/action.yml
+++ b/action.yml
@@ -1,1 +1,4 @@
-
+Name : Calculator.
+Author : Darsh Turakhia.
+Description : This is a basic calculator built in android studio using java.
+Input : You can perform the basic 4 operations of calculator in this app.
